add logging for debugging

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
            return myObject;
        });
        myData.splice(0,1); //remove the first row, which contains the orginal column headers
+       console.log(myData);
        return myData;
      }
    },
