Add default content for columns

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     function createTableColumns(){
 
       var tableColumns =   [
-		      {'data': 'task', 'title': 'Recommendation/Task Name', 'className':'task' },
-		      {'data': 'theme', 'title': 'Theme', 'className':'theme' },
-		      {'data': 'assigned', 'title': 'Assigned To', 'className':'assigned'},
-		      {'data': 'priority', 'title': 'Priority', 'className':'priority'},
-		      {'data': 'targetDate', 'title': 'Target Date', 'className':'targetDate'},
-          {'data': 'status', 'title': 'Status', 'className':'Status'},
+		      {'data': 'task', 'title': 'Recommendation/Task Name', 'className':'task', "defaultContent": "" },
+		      {'data': 'theme', 'title': 'Theme', 'className':'theme', "defaultContent": "" },
+		      {'data': 'assigned', 'title': 'Assigned To', 'className':'assigned', "defaultContent": ""},
+		      {'data': 'priority', 'title': 'Priority', 'className':'priority', "defaultContent": ""},
+		      {'data': 'targetDate', 'title': 'Target Date', 'className':'targetDate', "defaultContent": ""},
+          {'data': 'status', 'title': 'Status', 'className':'Status', "defaultContent": ""},
 	       ];
     return tableColumns;
 }
