--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <!--Include required JavaScript libraries
+    <!--Include required JavaScript libraries and CSS files
     -->
+    <link href="https://cdn.datatables.net/v/dt/dt-1.13.4/datatables.min.css" rel="stylesheet"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 
