--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
   'columns': createTableColumns(),
 
   'createdRow': function( row, data, dataIndex ) {
-    console.log('created row!');
-    if ( data[3] != "" ) {
+    console.log(data);
       $(row).addClass( data[3] );
-    }
   }
 
 
