--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   'createdRow': function( row, data, dataIndex ) {
     console.log(data);
-      $(row).addClass( data[3] );
+      $(row).children('.priority').addClass('test');
   }
 
 
