--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		      {'data': 'priority', 'title': 'Priority', 'className':'priority', "defaultContent": ""},
 		      {'data': 'targetDate', 'title': 'Target Date', 'className':'targetDate', "defaultContent": ""},
           {'data': 'status', 'title': 'Status', 'className':'status', "defaultContent": ""},
+          {'data': 'sort, 'title': 'Sort, 'visible':false}
+
 	       ];
     return tableColumns;
 }
@@ -38,7 +40,7 @@
 
     var oTable = $('#data-table-container').DataTable({
       'ajax' : {
-     url:'https://sheets.googleapis.com/v4/spreadsheets/1QzT3tUeBBd7R7NWbpVIPM9G_fI_DH2knKKZeP82PDY0/values/A:M?key=AIzaSyCmqnBijhOsTPfft3WE6rYAfQ1tERXPoAg',
+     url:'https://sheets.googleapis.com/v4/spreadsheets/1QzT3tUeBBd7R7NWbpVIPM9G_fI_DH2knKKZeP82PDY0/values/A:G?key=AIzaSyCmqnBijhOsTPfft3WE6rYAfQ1tERXPoAg',
      cache: true,
      'dataSrc': function(json) {
        var myData = json['values']; //spreadsheet data lives in an array with the name values
@@ -50,7 +52,8 @@
              assigned:n[2],
              priority:n[3],
              targetDate:n[4],
-             status:n[5]
+             status:n[5],
+             sort: n[6]
            };
            return myObject;
        });
@@ -59,6 +62,7 @@
        return myData;
      }
    },
+  'order': [[ 6, "asc" ]],
   'columns': createTableColumns(),
 
   'createdRow': function( row, data, dataIndex ) {
