--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		      {'data': 'priority', 'title': 'Priority', 'className':'priority', "defaultContent": ""},
 		      {'data': 'targetDate', 'title': 'Target Date', 'className':'targetDate', "defaultContent": ""},
           {'data': 'status', 'title': 'Status', 'className':'status', "defaultContent": ""},
-          {'data': 'sort, 'title': 'Sort, 'visible':false}
+          {'data': 'sort', 'title': 'Sort, 'visible':false}
 
 	       ];
     return tableColumns;
