--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <!--Include required JavaScript libraries and CSS files
     -->
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.4/datatables.min.css" rel="stylesheet"/>
+    <link href="demo.css" rel="stylesheet"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 
@@ -29,7 +30,7 @@
 		      {'data': 'priority', 'title': 'Priority', 'className':'priority', "defaultContent": ""},
 		      {'data': 'targetDate', 'title': 'Target Date', 'className':'targetDate', "defaultContent": ""},
           {'data': 'status', 'title': 'Status', 'className':'status', "defaultContent": ""},
-          {'data': 'sort', 'title': 'Sort, 'visible':false}
+          {'data': 'sort', 'title': 'Sort', 'visible':false}
 
 	       ];
     return tableColumns;
