--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
   </head>
   <body>
+    <div class="buttons">
+      <ul>
+        <li class="theme-button" value="Retention, Training and Learning">Retention, Training and Learning</li>
+      </ul>
+    </div> 
     <!--The script will write the table to this div
     -->
     <div id="googleSheetsDataTable">
