--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
   <body>
     <div class="buttons">
       <ul>
+        <li class="theme-button" value="Budget">Budget</li>
+        <li class="theme-button" value="Leadership">Leadership</li>
+        <li class="theme-button" value="Recruitment">Recruitment</li>
         <li class="theme-button" value="Retention, Training and Learning">Retention, Training and Learning</li>
+        <li class="theme-button" value="Security">Security</li>
+        <li class="theme-button" value="Student Assistant Retention, Training and Learning">Student Assistant Retention, Training and Learning</li>
       </ul>
     </div> 
     <!--The script will write the table to this div
