--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
   </head>
   <body>
     <div class="buttons">
-      <ul>
-        <li class="theme-button" value="Budget">Budget</li>
-        <li class="theme-button" value="Leadership">Leadership</li>
-        <li class="theme-button" value="Recruitment">Recruitment</li>
-        <li class="theme-button" value="Retention, Training and Learning">Retention, Training and Learning</li>
-        <li class="theme-button" value="Security">Security</li>
-        <li class="theme-button" value="Student Assistant Retention, Training and Learning">Student Assistant Retention, Training and Learning</li>
-      </ul>
+        <button type="button" class="btn btn-outline-primary" value="Budget">Budget</button>
+        <button type="button" class="btn btn-outline-primary" value="Leadership">Leadership</button>
+        <button type="button" class="btn btn-outline-primary" value="Recruitment">Recruitment</button>
+        <button type="button" class="btn btn-outline-primary" value="Retention, Training and Learning">Retention, Training and Learning</button>
+        <button type="button" class="btn btn-outline-primary" value="Security">Security</button>
+        <button type="button" class="btn btn-outline-primary" value="Student Assistant Retention, Training and Learning">Student Assistant Retention, Training and Learning</button>
     </div> 
     <!--The script will write the table to this div
     -->
