--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button type="button" class="btn btn-outline-primary" onclick("Budget")>Budget</button>
         <button type="button" class="btn btn-outline-primary" onclick("Leadership")>Leadership</button>
         <button type="button" class="btn btn-outline-primary" onclick("Recruitment")>Recruitment</button>
-        <button type="button" class="btn btn-outline-primary" onclick("Retention, Training and Learning">Retention, Training and Learning")></button>
+        <button type="button" class="btn btn-outline-primary" onclick("Retention, Training and Learning")>></button>
         <button type="button" class="btn btn-outline-primary" onclick("Security")>Security</button>
         <button type="button" class="btn btn-outline-primary" onclick("Student Assistant Retention, Training and Learning")>Student Assistant Retention, Training and Learning</button>
     </div> 
