--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   </head>
   <body>
     <div class="buttons">
-        <button type="button" class="btn btn-outline-primary filter-button" onclick="filterButtons('Budget')">Budget</button>
-        <button type="button" class="btn btn-outline-primary filter-button" onclick="filterButtons('Leadership')">Leadership</button>
-        <button type="button" class="btn btn-outline-primary filter-button" onclick="filterButtons('Recruitment')">Recruitment</button>
-        <button type="button" class="btn btn-outline-primary filter-button" onclick="filterButtons('Retention, Training and Learning')">Retention, Training and Learning</button>
-        <button type="button" class="btn btn-outline-primary filter-button" onclick="filterButtons('Security')">Security</button>
-        <button type="button" class="btn btn-outline-primary filter-button" onclick="filterButtons('Student Assistant Retention, Training and Learning')">Student Assistant Retention, Training and Learning</button>
+        <button type="button" class="btn btn-outline-primary filter-button" value="Budget"">Budget</button>
+        <button type="button" class="btn btn-outline-primary filter-button" value="Leadership">Leadership</button>
+        <button type="button" class="btn btn-outline-primary filter-button" value="Recruitment">Recruitment</button>
+        <button type="button" class="btn btn-outline-primary filter-button" value="Retention, Training and Learning">Retention, Training and Learning</button>
+        <button type="button" class="btn btn-outline-primary filter-button" value="Security">Security</button>
+        <button type="button" class="btn btn-outline-primary filter-button" value="Student Assistant Retention, Training and Learning">Student Assistant Retention, Training and Learning</button>
     </div> 
     <!--The script will write the table to this div
     -->
