--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
  
 
   </head>
-  <body>
+  <body style="padding: 25px">
+    <h1 style="padding-bottom: 50px">Internal Dashboard</h1>
     <!--<div class="buttons">
         <button type="button" class="btn btn-outline-primary filter-button" value="Budget"">Budget</button>
         <button type="button" class="btn btn-outline-primary filter-button" value="Leadership">Leadership</button>
