--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body style="padding: 25px">
     <h1 style="padding-bottom: 50px">Internal Dashboard</h1>
+    <h2 style="padding-bottom: 50px"> This is an internal dashboard to assess ARAWG recommendations</h2>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
       <label class="form-check-label" for="inlineRadio1">All Recommendations</label>
