--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
 
   </head>
   <body style="padding: 25px">
-    <h1 style="padding-bottom: 50px">Internal Dashboard</h1>
-    <h2 style="padding-bottom: 50px"> This is an internal dashboard to assess ARAWG recommendations</h2>
+    <h1 style="padding-bottom: 50px">Recommendations & Accountability Internal Dashboard</h1>
+    <h3 style="padding-bottom: 50px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas:
+
+Budget
+Leadership
+Recruitment
+Retention
+Security
+Student Assistants</h3>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
       <label class="form-check-label" for="inlineRadio1">All Recommendations</label>
