--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
   </head>
   <body style="padding: 25px">
-    <h1 style="padding-bottom: 50px">Recommendations & Accountability Internal Dashboard</h1>
-    <h3 style="padding-bottom: 50px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas:
-
-Budget
-Leadership
-Recruitment
-Retention
-Security
-Student Assistants</h3>
+    <h1>Recommendations & Accountability Internal Dashboard</h1>
+    <h4 style="padding-bottom: 50px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas:
+<ul>
+<li>Budget</li>Budget
+<li>Leadership</li>Leadership
+<li>Recruitment</li>Recruitment
+<li>Retention</li>Retention
+<li>Security</li>Security
+<li>Student Assistants</li>Student Assistants</ul></h4>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
       <label class="form-check-label" for="inlineRadio1">All Recommendations</label>
