--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <li>Retention</li>Retention
 <li>Security</li>Security
 <li>Student Assistants</li>Student Assistants</ul></h4>
+<span>Filter by:</span>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
       <label class="form-check-label" for="inlineRadio1">All Recommendations</label>
