--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <h1>Recommendations & Accountability Internal Dashboard</h1>
     <h4 style="padding-bottom: 50px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas:
 <ul>
-<li>Budget</li>Budget
-<li>Leadership</li>Leadership
-<li>Recruitment</li>Recruitment
-<li>Retention</li>Retention
-<li>Security</li>Security
-<li>Student Assistants</li>Student Assistants</ul></h4>
+<li>Budget</li>
+<li>Leadership</li>
+<li>Recruitment</li>
+<li>Retention</li>
+<li>Security</li>
+<li>Student Assistants</li></ul></h4>
 <span>Filter by:</span>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
