--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
   </head>
   <body style="padding: 25px">
     <h1>Recommendations & Accountability Internal Dashboard</h1>
-    <h4 style="padding-bottom: 50px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas:
-<ul>
+    <h4 style="padding-bottom: 50px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas: </h4>
+<h5>
+    <ul>
 <li>Budget</li>
 <li>Leadership</li>
 <li>Recruitment</li>
 <li>Retention</li>
 <li>Security</li>
-<li>Student Assistants</li></ul></h4>
+<li>Student Assistants</li></ul></h5>
 <span>Filter by:</span>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
