--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body style="padding: 25px">
     <h1>Recommendations & Accountability Internal Dashboard</h1>
-    <h4 style="padding-bottom: 50px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas: </h4>
-<h5>
+    <h4 style="padding-bottom: 25px"> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas: </h4>
+<h5 style="padding-bottom: 25px">
     <ul>
 <li>Budget</li>
 <li>Leadership</li>
