--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li>Retention</li>
 <li>Security</li>
 <li>Student Assistants</li></ul></h5>
-<span>Filter by:</span>
+<span> <b>Filter by:</b></span>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
       <label class="form-check-label" for="inlineRadio1">All Recommendations</label>
