--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h4> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas: </h4>
 <h5 style="padding-bottom: 25px">
     <ul>
-<li><a href="https://docs.google.com/document/d/1E8qq-auu3qYl4FgllVKASPQSENiS3i6u0dF9SgiZFwc/edit#heading=h.w511zt7x6378">Budget (B)</a>
+<li><a href="https://docs.google.com/document/d/1E8qq-auu3qYl4FgllVKASPQSENiS3i6u0dF9SgiZFwc/edit#heading=h.w511zt7x6378" target="_blank">Budget (B)</a>
 </li>
 <li>Leadership</li>
 <li>Recruitment</li>
