--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Leadership">
       <label class="form-check-label" for="inlineRadio3">Leadership</label>
     </div>
+
+     <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Recruitment">
+      <label class="form-check-label" for="inlineRadio3">Recruitment</label>
+    </div>
+    
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="Retention, Training and Learning">
       <label class="form-check-label" for="inlineRadio4">Retention, Training and Learning</label>
