--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
     <h4> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas: </h4>
 <h5 style="padding-bottom: 25px">
     <ul>
-<li><a href="https://docs.google.com/document/d/1E8qq-auu3qYl4FgllVKASPQSENiS3i6u0dF9SgiZFwc/edit#heading=h.w511zt7x6378" target="_blank">Budget (B)</a>
+<li><a href="https://docs.google.com/document/d/1kTYzyKSwNxf4qEWb8pul3cMxGueP27l98jtvUAODloI/edit?usp=drive_link" target="_blank">Budget (B)</a>
 </li>
-<li>Leadership</li>
-<li>Recruitment</li>
-<li>Retention</li>
-<li>Security</li>
-<li>Student Assistants</li></ul></h5>
+      <li><a href="https://docs.google.com/document/d/1kh2rhpIZoJ4RvdVGi959MurazWayUSPoZPN7EeERwuc/edit?usp=drive_link" target="_blank">Leadership (L)</a>
+</li>
+      <li><a href="https://docs.google.com/document/d/1mKXfb8y5oARWqqpHwl_XqUvZJ76twZsYDlVHeRfphtg/edit?usp=drive_link" target="_blank">Recruitment (R)</a>
+</li>
+      <li><a href="https://docs.google.com/document/d/1UDFIwAgiaD1HgCtcsd8ya6t7kJKORpyHIqpkUj7YJaM/edit?usp=drive_link" target="_blank">Retention, Training, and Learning (RTL) </a>
+</li>
+      <li><a href="https://docs.google.com/document/d/1nOUQhoTC0mBzTumhe5fkyGAG2i-2rVYJ3AiTqMbh34M/edit?usp=drive_link" target="_blank">Student Assistant Recruitment and Retention (SARR) </a>
+</li>
+</ul></h5>
 <span> <b>Filter by:</b></span>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
