--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body style="padding: 25px">
     <h1>Recommendations & Accountability Internal Dashboard</h1>
-    <h4> Our dashboard tracks the progress of the SJSU King Library to implement recommendations on the following six key areas: </h4>
+    <h4> Our dashboard tracks the progress of the SJSU King Library to implement Anti-Racism Advocacy and Assessment recommendations on the following six key areas: </h4>
 <h5 style="padding-bottom: 25px">
     <ul>
 <li><a href="https://docs.google.com/document/d/1kTYzyKSwNxf4qEWb8pul3cMxGueP27l98jtvUAODloI/edit?usp=drive_link" target="_blank">Budget (B)</a>
