--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 </li>
       <li><a href="https://docs.google.com/document/d/1mKXfb8y5oARWqqpHwl_XqUvZJ76twZsYDlVHeRfphtg/edit?usp=drive_link" target="_blank">Recruitment (R)</a>
 </li>
-      <li><a href="https://docs.google.com/document/d/1UDFIwAgiaD1HgCtcsd8ya6t7kJKORpyHIqpkUj7YJaM/edit?usp=drive_link" target="_blank">Retention, Training, and Learning (RTL) </a>
+      <li><a href="https://docs.google.com/document/d/1UDFIwAgiaD1HgCtcsd8ya6t7kJKORpyHIqpkUj7YJaM/edit?usp=drive_link" target="_blank">Retention, Training, and Learning (RTL)</a>
 </li>
-      <li><a href="https://docs.google.com/document/d/1nOUQhoTC0mBzTumhe5fkyGAG2i-2rVYJ3AiTqMbh34M/edit?usp=drive_link" target="_blank">Student Assistant Recruitment and Retention (SARR) </a>
+
+       <li><a href="https://docs.google.com/document/d/1nOUQhoTC0mBzTumhe5fkyGAG2i-2rVYJ3AiTqMbh34M/edit?usp=drive_link" target="_blank">Security (S)</a>
+</li>
+      <li><a href="https://docs.google.com/document/d/17PeUffOCXMqRaCJrKfySludEMuwL4p7X3KfsPv6j2X8/edit?usp=drive_link" target="_blank">Student Assistant Recruitment and Retention (SARR)</a>
 </li>
 </ul></h5>
 <span> <b>Filter by:</b></span>
