--- a/accountability-dashboard/index.html
+++ b/accountability-dashboard/index.html
@@ -19,22 +19,22 @@
 
   </head>
   <body style="padding: 25px">
-    <h1>Recommendations & Accountability Internal Dashboard</h1>
+    <h1>Recommendations & Accountability Dashboard</h1>
     <h4> Our dashboard tracks the progress of the SJSU King Library to implement Anti-Racism Advocacy and Assessment recommendations on the following six key areas: </h4>
 <h5 style="padding-bottom: 25px">
     <ul>
-<li><a href="https://docs.google.com/spreadsheets/d/1A_o9Nk-COZl21FqTKgcwhS_EU1wo3reEMvufj3fovWc/edit#gid=2074253193" target="_blank">Budget (B)</a>
+<li><Budget
 </li>
-      <li><a href="https://docs.google.com/document/d/1kTYzyKSwNxf4qEWb8pul3cMxGueP27l98jtvUAODloI/edit?usp=drive_link" target="_blank">Leadership (L)</a>
+      <li>Leadership
 </li>
-      <li><a href="https://docs.google.com/document/d/1mKXfb8y5oARWqqpHwl_XqUvZJ76twZsYDlVHeRfphtg/edit?usp=drive_link" target="_blank">Recruitment (R)</a>
+      <li>Recruitment
 </li>
-      <li><a href="https://docs.google.com/document/d/1UDFIwAgiaD1HgCtcsd8ya6t7kJKORpyHIqpkUj7YJaM/edit?usp=drive_link" target="_blank">Retention, Training, and Learning (RTL)</a>
+      <li>Retention, Training, and Learning
 </li>
 
-       <li><a href="https://docs.google.com/document/d/1nOUQhoTC0mBzTumhe5fkyGAG2i-2rVYJ3AiTqMbh34M/edit?usp=drive_link" target="_blank">Security (S)</a>
+       <li>Security
 </li>
-      <li><a href="https://docs.google.com/document/d/17PeUffOCXMqRaCJrKfySludEMuwL4p7X3KfsPv6j2X8/edit?usp=drive_link" target="_blank">Student Assistant Recruitment and Retention (SARR)</a>
+      <li>Student Assistant Recruitment and Retention
 </li>
 </ul></h5>
 <span> <b>Filter by:</b></span>
