--- a/accountability-dashboard/index.html
+++ b/accountability-dashboard/index.html
@@ -23,7 +23,7 @@
     <h4> Our dashboard tracks the progress of the SJSU King Library to implement Anti-Racism Advocacy and Assessment recommendations on the following six key areas: </h4>
 <h5 style="padding-bottom: 25px">
     <ul>
-<li><Budget
+<li>Budget
 </li>
       <li>Leadership
 </li>
