Update title and description in index.html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   </head>
   <body style="padding: 25px">
-    <h1>Recommendations & Accountability Internal Dashboard</h1>
-    <h4> Our dashboard tracks the progress of the SJSU King Library to implement Anti-Racism Advocacy and Assessment recommendations on the following six key areas: </h4>
+    <h1>SJSU AU Vendor Tool</h1>
+    <h4> Description </h4>
 <h5 style="padding-bottom: 25px">
     <ul>
 <li><a href="https://docs.google.com/document/d/1kTYzyKSwNxf4qEWb8pul3cMxGueP27l98jtvUAODloI/edit?usp=drive_link" target="_blank">Budget (B)</a>
