--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
 </ul></h5>
 <span> <b>Filter by:</b></span>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="All Recommendations">
-      <label class="form-check-label" for="inlineRadio1">All Recommendations</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Display Name">
+      <label class="form-check-label" for="inlineRadio1">Display Name</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Budget">
-      <label class="form-check-label" for="inlineRadio2">Budget</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Product Name (with Access Link)">
+      <label class="form-check-label" for="inlineRadio2">Product Name (with Access Link)</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Leadership">
-      <label class="form-check-label" for="inlineRadio3">Leadership</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="AI Types">
+      <label class="form-check-label" for="inlineRadio3">AI Types</label>
     </div>
 
      <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Recruitment">
-      <label class="form-check-label" for="inlineRadio3">Recruitment</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Release Type">
+      <label class="form-check-label" for="inlineRadio3">Release Type</label>
     </div>
     
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="Retention, Training and Learning">
-      <label class="form-check-label" for="inlineRadio4">Retention, Training and Learning</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="Last Reviewed (Date)">
+      <label class="form-check-label" for="inlineRadio4">Last Reviewed (Date)</label>
     </div>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="Security">
