--- a/index.html
+++ b/index.html
@@ -47,12 +47,8 @@
       <label class="form-check-label" for="inlineRadio4">Last Reviewed (Date)</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="Security">
-      <label class="form-check-label" for="inlineRadio5">Security</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="Student Assistant Retention, Training and Learning">
-      <label class="form-check-label" for="inlineRadio6">Student Assistant Retention, Training and Learning</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="All Results">
+      <label class="form-check-label" for="inlineRadio5">All Results</label>
     </div>
     <!--The script will write the table to this div
     -->
