--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   </head>
   <body style="padding: 25px">
-    <h1>SJSU AU Vendor Tool</h1>
-    <h4> Description </h4>
+    <h1>SJSU-Licensed AI Vendor Tools</h1>
+
 <h5 style="padding-bottom: 25px">
     </h5>
 <span> <b>Filter by:</b></span>
