--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </h5>
 <span> <b>Filter by:</b></span>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Display Name">
-      <label class="form-check-label" for="inlineRadio1">Display Name</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Vendor">
+      <label class="form-check-label" for="inlineRadio1">Vendor</label>
     </div>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Product Name (with Access Link)">
